@@ -54,7 +54,6 @@ QT_CLASS_LIB(QtMsgHandler, QtCore, qglobal.h)
 QT_CLASS_LIB(QGlobalStatic, QtCore, qglobal.h)
 QT_CLASS_LIB(QGlobalStatic, QtCore, qglobal.h)
 QT_CLASS_LIB(QGlobalStaticDeleter, QtCore, qglobal.h)
-QT_CLASS_LIB(QBool, QtCore, qglobal.h)
 QT_CLASS_LIB(QTypeInfo, QtCore, qglobal.h)
 QT_CLASS_LIB(QTypeInfo, QtCore, qglobal.h)
 QT_CLASS_LIB(QFlag, QtCore, qglobal.h)
