@@ -65,11 +65,6 @@ private slots:
     void stream_bool_data();
     void stream_bool();
 
-    void stream_QBool_data();
-    void stream_QBool();
-
-    void stream_QBool_in_4_0();
-
     void stream_QBitArray_data();
     void stream_QBitArray();
 
@@ -193,7 +188,6 @@ private slots:
 
 private:
     void writebool(QDataStream *s);
-    void writeQBool(QDataStream *s);
     void writeQBitArray(QDataStream *s);
     void writeQBrush(QDataStream *s);
     void writeQColor(QDataStream *s);
@@ -221,7 +215,6 @@ private:
     void writeQEasingCurve(QDataStream *s);
 
     void readbool(QDataStream *s);
-    void readQBool(QDataStream *s);
     void readQBitArray(QDataStream *s);
     void readQBrush(QDataStream *s);
     void readQColor(QDataStream *s);
@@ -793,57 +786,6 @@ void tst_QDataStream::readbool(QDataStream *s)
     bool d1;
     *s >> d1;
     QVERIFY(d1 == expected);
-}
-
-// ************************************
-
-static QBool QBoolData(int index)
-{
-    switch (index) {
-    case 0: return QBool(true);
-    case 1: return QBool(false);
-    case 2: return QBool(bool(2));
-    case 3: return QBool(bool(-1));
-    case 4: return QBool(bool(127));
-    }
-
-    return QBool(false);
-}
-
-void tst_QDataStream::stream_QBool_data()
-{
-    stream_data(5);
-}
-
-void tst_QDataStream::stream_QBool()
-{
-    STREAM_IMPL(QBool);
-}
-
-void tst_QDataStream::writeQBool(QDataStream *s)
-{
-    QBool d1 = QBoolData(dataIndex(QTest::currentDataTag()));
-    *s << d1;
-}
-
-void tst_QDataStream::readQBool(QDataStream *s)
-{
-    QBool expected = QBoolData(dataIndex(QTest::currentDataTag()));
-
-    bool d1 = true;
-    *s >> d1;
-    QVERIFY(d1 == expected);
-}
-
-void tst_QDataStream::stream_QBool_in_4_0()
-{
-    QByteArray byteArray;
-    QDataStream out(&byteArray, QIODevice::WriteOnly);
-
-    QString str("ABC");
-    out << str.contains('A') << str.contains('Z');
-
-    QCOMPARE(byteArray.size(), 2);
 }
 
 // ************************************
