@@ -39,6 +39,12 @@ information about a particular change.
 - Qt::escape() is deprecated (but can be enabled via
   QT_DISABLE_DEPRECATED_BEFORE), use QString::toHtmlEscaped() instead.
 
+- QBool is gone. QString::contains, QByteArray::contains, and QList::contains
+  used to return an internal QBool class so that the Qt3 code
+  "if (a.contains() == 2)" wouldn't compile anymore. Such code cannot exist
+  in Qt4, so these methods return a bool now. If your code used the undocumented
+  QBool, simply replace it with bool.
+
 - QMetaType::construct() has been renamed to QMetaType::create().
 
 - QTestLib:
